# SWCon-Pyside

./: .gitignore  Controller Keyconfig.bat  LICENSE.md  Main.bat  THIRD_PARTY_NOTICES.md  convertUI2PY.bat  copilot.md  install.bat  main.py  mainwindow.py  pyproject.toml  readme.md  requirements.txt  swcontroller.py
Commands/: CommandBase.py  command_base.py
Commands/MCU/: MashA.py  mcu_command_base.py
Commands/Python/: LoggingSample.py  MashA.py  Sample.py  samplescript.py  table_turf_auto.py  tutorial.py
Commands/Python/verification/: A連打.key  LoggingSample.key  Mash_A.key  RunMacro.key  Test.key  (+3 more)
config/: private_key.pem  settings.toml
libs/: CommandBase.py  CommandLoader.py  LineNotify.py  Utility.py  camera_process.py  capture.py  cli.py  com_port_assist.py  command_catalog.py  command_models.py  command_runtime.py  command_session_controller.py  command_simplifier.py  enums.py  frame_store.py  frame_store_registry.py  game_pad_connect.py  gui_stick_store.py  keys.py  mcu_command_base.py  multi_slot_view.py  nsw2_hid_enabler.py  script_verify.py  sender.py  serial_worker.py  session_slot.py  settings.py  slot_config.py  slot_manager.py  slot_panel_widget.py  template_match_support.py  template_repository.py
libs/resources/: default_settings.toml
libs/visual_macro/: __init__.py  bridge.py  editor_widget.py  errors.py  factory.py  models.py  repository.py  runtime.py  schema.py  template_service.py
macro/: .gitignore
ui/: QtextLogger.py  graphic_view_template.py  joycon.ui  joystick_widget.py  key_config.py  key_config.ui  main_ui.py  mainwindow.ui  scaled_label.py  style.qss  template_match_support.ui  template_match_support_ui.py  ui_mainwindow.py
ui/visual_macro/: app.js  blocks.js  index.html  styles.css  toolbox.json
(+13 files in other folders)
