[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swcon-pyside"
version = "0.9.2"
description = "SWController PySide application"
readme = "README.md"
requires-python = "==3.12.*"
license = { file = "LICENSE.md" }
authors = [{ name = "Moi-poke" }]
dependencies = [
    "cv2-enumerate-cameras>=1.3.3",
    "libusb-package>=1.0.26.3",
    "mypy>=1.20.0",
    "mypy-extensions>=1.1.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "pygame>=2.6.1",
    "pykakasi>=2.3.0",
    "pyserial>=3.5",
    "pyside6>=6.11.0",
    "pyusb>=1.3.1",
    "requests>=2.33.1",
    "scipy>=1.15.3",
    "toml>=0.10.2",
    "tomli>=2.4.1",
]


[project.urls]
Homepage = "https://github.com/Moi-poke/SWCon-Pyside"
Repository = "https://github.com/Moi-poke/SWCon-Pyside.git"

[project.scripts]
swcontroller = "swcontroller:main"

[tool.setuptools]
include-package-data = true
py-modules = ["swcontroller", "mainwindow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*", "ui*"]

[tool.setuptools.package-data]
ui = ["*.qss", "*.ui", "visual_macro/*"]
